Add the AWS updater
Yet there is a module with all process to connect to AWS to send the
information

--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,8 @@ ENV/
 
 # Rope project settings
 .ropeproject
+VeriSignG5Key.pem
+certificate_pem.crt
+public_pem.key
+private_pem.key
+conectar.txt
